WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174055
RealtimeOutgoingVideoSource should pass frame timestamp
https://bugs.webkit.org/show_bug.cgi?id=174055
Summary
RealtimeOutgoingVideoSource should pass frame timestamp
youenn fablet
Reported
2017-06-30 16:31:23 PDT
Previously this was not needed.
Attachments
Patch
(2.04 KB, patch)
2017-06-30 16:34 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(2.06 KB, patch)
2017-06-30 16:39 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-06-30 16:31:56 PDT
rdar://problem/33062003
youenn fablet
Comment 2
2017-06-30 16:34:10 PDT
Created
attachment 314318
[details]
Patch
Build Bot
Comment 3
2017-06-30 16:37:14 PDT
Attachment 314318
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSource.cpp:189: timestamp_us is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 4
2017-06-30 16:39:21 PDT
Created
attachment 314320
[details]
Patch
WebKit Commit Bot
Comment 5
2017-07-02 11:43:26 PDT
Comment on
attachment 314320
[details]
Patch Clearing flags on attachment: 314320 Committed
r219058
: <
http://trac.webkit.org/changeset/219058
>
WebKit Commit Bot
Comment 6
2017-07-02 11:43:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug