RealtimeOutgoingVideoSource should pass frame timestamp https://bugs.webkit.org/show_bug.cgi?id=174055

Patch by Youenn Fablet <youenn@apple.com> on 2017-07-02
Reviewed by Eric Carlson.

Covered by manual testing since this only affects video encoding quality.

* platform/mediastream/mac/RealtimeOutgoingVideoSource.cpp:
(WebCore::RealtimeOutgoingVideoSource::sendFrame):

Canonical link: https://commits.webkit.org/190913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219058 268f45cc-cd09-0410-ab3c-d52691b4dbfc